tests/NormalTests/paczka1/small_fuzzy/57255412.err
Error in line 6: EAM3 A481 39,4
Error in line 8: EAM3 A441 51,8
Error in line 7: 2ifE6Edg A441 69,9
Error in line 9: EAM3 A481 17,2
Error in line 10: yeJ S546 49,0
